--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "space",
-  "version": "1.0.0",
-  "productName": "Space",
+  "name": "lemonschat",
+  "version": "0.3.1",
+  "productName": "Lemonschat",
   "main": "index.js",
-  "author": "Sarthak Gupta",
+  "author": "Gabriel Nastase",
   "license": "MIT",
   "scripts": {
     "build:dev": "webpack",
