--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-modal": "2.2.2",
     "react-redux": "5.0.5",
     "react-router-dom": "4.1.2",
+    "react-window-size": "^1.2.2",
     "react-youtube": "^7.9.0",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
